--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,29 @@
+@font-face {
+  font-family: "Title Font";
+  src: url('../fonts/titlefont.ttf');
+}
 #map {
   height: 450px;
   margin: 0;
+}
+.loginBackground{
+  background-color:#262927;
+}
+.loginTitle{
+  color:whitesmoke;
+  font-size: 36px;
+  font-family: "Title Font";
+}
+.couchIcon{
+  width: 180px;
+  height: 180px;
+}
+.loginBtn{
+  height:220px;
+  width:220px;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.50);
+  background-color: #5A6B78;
+  margin-left:21%;
 }
