--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,28 +1,22 @@
 <ion-view view-title="Dashboard">
   <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
-        </div>
+    <ion-item class="list card" ng-repeat="post in posts">
+
+      <div class="item item-avatar">
+        <img src="avatar.jpg">
+        <h2>{{post.title}}</h2>
+        <p>{{post.gameName}}, {{post.systemName}}</p>
       </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
+
+      <div class="item item-text-wrap">
+        <p>{{post.description}}</p>
       </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
-    </div>
+
+      <a class="item item-icon-left assertive" href="#">
+        <i class="icon ion-location"></i>
+        user's location
+      </a>
+
+    </ion-item>
   </ion-content>
 </ion-view>
