--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,5 +8,8 @@
       <img class="couchIcon" src="img/gamrsIcon.png">
     </button>
 
+    <p class="loginText">Login</p>
+
+
   </ion-content>
 </ion-view>
