--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -4,6 +4,7 @@
     <ion-toggle  ng-model="settings.enableFriends">
         Enable Friends
     </ion-toggle>
+      <button class="button button-block button-assertive" onclick="logout()" href="/#/login">Logout</button>
     </ion-list>
   </ion-content>
 </ion-view>
