--- a/www/templates/tab-location.html
+++ b/www/templates/tab-location.html
@@ -1,7 +1,10 @@
 <ion-view view-title="Write a new post">
   <ion-content>
     <ion-list>
-      <p>Finding Gamers in your area...</p>
+      <div class="locationLoading">
+        <img class="locationLogo" src="../img/gamrsIcon.png">
+        <p class="locationLoadText">Finding people near you...</p>
+      </div>
     </ion-list>
   </ion-content>
 </ion-view>
