--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -21,7 +21,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Settings Tab -->
-  <ion-tab icon-off="ion-ios-gear" icon-on="ion-ios-gear" href="#/tab/account">
+  <ion-tab icon-off="gear-android" icon-on="gear-android" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
